# yasli-backend

./: Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md
migrations/: env.py
migrations/versions/: 0001_init.py  0002_data_model.py  0003_address_centric_schema.py  0004_nursery_metadata.py  0005_grao_district_routing.py  0006_settlement_code.py  0007_settlements_reference_table.py  0008_address_institutions_institution_id_index.py
src/yasli/: config.py  db.py  main.py
src/yasli/geo/: __init__.py  settlements.py
src/yasli/ingest/: __main__.py  district_stamp.py  grao_loader.py  match_data_validation.py  normalise.py  parser.py  pipeline.py  r2.py
src/yasli/models/: __init__.py  address.py  address_entry.py  grao_address.py  institution.py  settlement.py  street.py  types.py
src/yasli/routes/: addresses.py  health.py  institutions.py  match.py  streets.py
tests/: conftest.py  test_addresses.py  test_addresses_openapi.py  test_alembic.py  test_config.py  test_constraints.py  test_cors.py  test_db.py  test_district_stamp.py  test_grao_loader.py  test_health.py  test_ingest_cli.py  test_institutions.py  test_institutions_openapi.py  test_match.py  test_match_data_validation.py  test_match_openapi.py  test_matching.py  test_migrations.py  test_models.py  test_settlements.py  test_streets.py  test_streets_openapi.py
tests/ingest/: conftest.py  test_cli.py  test_normalise.py  test_parser.py  test_pipeline.py  test_r2.py
tests/snapshot_contract/: test_schema_match.py
(+7 files in other folders)
