[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yasli"
version = "0.1.0"
description = "Backend for yasli — FastAPI HTTP API plus an ingest CLI that pulls scraper snapshots from R2 into Postgres."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2",
  "psycopg[binary]>=3",
  "alembic>=1.13",
  "pydantic-settings>=2",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "moto[s3]>=5",
  "testcontainers[postgres]>=4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
